manifests-local/istio/deploy-shopping-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop-shopping-deploy-v1
  labels:
    app: coffeeshop-shopping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffeeshop-shopping
      version: v1
  template:
    metadata:
      labels:
        app: coffeeshop-shopping
        version: v1
    spec:
      containers:
        - name: eks-demo-coffeeshop-shopping
          image: mortredn/eks-demo-coffeeshop-shopping:1.1-no-migration
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 4000
